--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
   font-style: normal;
+  scroll-behavior: smooth;
 }
 
 /* line 13, ../../Arafath/CL/December/234. Finance/HTML/scss/theme-default.scss */
@@ -1360,7 +1361,7 @@ h3 {
 
 /* line 1, ../../Arafath/CL/December/234. Finance/HTML/scss/_slider.scss */
 .slider_bg_1 {
-  background-image: url(../img/banner/banner.png);
+  background-image: url(../img/banner/background-image-top.jpg);
 }
 
 /* line 4, ../../Arafath/CL/December/234. Finance/HTML/scss/_slider.scss */
@@ -1388,7 +1389,7 @@ h3 {
 
 /* line 20, ../../Arafath/CL/December/234. Finance/HTML/scss/_slider.scss */
 .slider_area .single_slider {
-  height: 900px;
+  height: 800px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -1581,7 +1582,7 @@ h3 {
 
 /* line 133, ../../Arafath/CL/December/234. Finance/HTML/scss/_slider.scss */
 .slider_area .payment_form .single_input input {
-  height: 50px;
+  height: 50px; /*originally 50px*/
   border: 1px solid #F0F0F0;
   padding: 15px;
   font-size: 16px;
@@ -2292,7 +2293,8 @@ h3 {
   top: 0;
   height: 100%;
   content: '';
-  background-image: url(../img/faq/faq.png);
+  background-image: url(../img/faq/faq.jpg);
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -2820,6 +2822,12 @@ p #amount {
   padding-top: 145px;
   padding-bottom: 129px;
 }
+
+/* @media (max-width: 980px){
+  .col-xl-2 .col-md-6 .col-lg-2{
+    margin-left: 0px;
+  }
+} */
 
 @media (max-width: 767px) {
   /* line 10, ../../Arafath/CL/December/234. Finance/HTML/scss/_footer.scss */
@@ -3528,7 +3536,8 @@ p #amount {
 
 /* line 1, ../../Arafath/CL/December/234. Finance/HTML/scss/_loan.scss */
 .apply_loan {
-  background-image: url(../img/banner/loan.png);
+  background-image: url(../img/banner/start-now.jpg);
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 137px 0;
@@ -3586,7 +3595,8 @@ p #amount {
 
 /* line 1, ../../Arafath/CL/December/234. Finance/HTML/scss/_brand.scss */
 .brad_area {
-  padding-bottom: 150px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 @media (max-width: 767px) {
