--- a/q-exam/style.css
+++ b/q-exam/style.css
@@ -91,3 +91,62 @@
     cursor: pointer;
     touch-action: cross-slide-x;
 }
+
+/* Style for question.html */
+.q-container {
+    padding: 50px;
+    background-color: green;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.q-head {
+    width: 100% auto;
+    text-align: center;
+    margin: 60px 0px 50px 0px;
+    font-size: 50px;
+    font-weight: 750;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}   
+.start-field {
+    width: 60%;
+    background-color: rgba(0, 0, 0, 0.541);
+    padding: 50px 0px 50px 0px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 50px black;
+    color: white;
+}
+.start-test {
+    width: 100% auto;
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.start-button {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width: 100% auto;
+    text-align: center;
+    padding: 30px;
+}
+.start-button input {
+    font-size: 25px;
+    padding: 20px 40px 20px 40px;
+    border-radius: 30px;
+    border: 0;
+    background-color: indigo;
+    color: white;
+    transition: .6s;
+    font-weight: 600;
+}
+.start-button input:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+.rules {
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 15px;
+    width: 100% auto;
+    text-align: center;
+}
