--- a/q-exam/style.css
+++ b/q-exam/style.css
@@ -4,7 +4,7 @@
 }
 .header {
     padding: 30px;
-    width: 100%;
+    width: 100% auto;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -25,19 +25,33 @@
 }
 .question-list {
     display: flex;
-    width: 100%;
-    padding-bottom: 20px;
-    justify-content: center;
+    width: inherit;
+    padding: 10px;
+    margin: 10px;
     align-items: center;
+    overflow: auto;
 }
 .q-circle {
     background-color: khaki;
     padding: 10px;
-    width: 50px;
+    width:300px;
     text-align: center;
     border-radius: 50px;
+    transition: .7s;
 }
-
+.q-circle:hover {
+    cursor: pointer;
+}
+.topic-selected {
+    background-color: rgb(197, 27, 27) !important;
+    border: 2px solid rgb(126, 4, 4) !important;
+    box-shadow: 0px 0px 10px black !important;
+}
+.question-selected {
+    background-color: rgb(209, 194, 55) !important;
+    border: 1px solid rgb(131, 118, 7) !important;
+    box-shadow: 0px 0px 10px black !important;
+}
 .option-container {
     background-color: cornflowerblue;
     padding: 10px;
@@ -53,7 +67,7 @@
     justify-content: space-around;
     align-items: center;
 }
-.topic-container .topic{
+.topic{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -94,12 +108,14 @@
 
 /* Style for question.html */
 .q-container {
-    padding: 50px;
-    background-color: green;
+    background: url("https://mbcpeermade.com/userfiles/poster/1b97d750aa514ce1830cb183dab59107.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 .q-head {
     width: 100% auto;
@@ -129,17 +145,20 @@
     text-align: center;
     padding: 30px;
 }
-.start-button input {
+.start-button button {
     font-size: 25px;
     padding: 20px 40px 20px 40px;
     border-radius: 30px;
     border: 0;
     background-color: indigo;
-    color: white;
     transition: .6s;
     font-weight: 600;
 }
-.start-button input:hover {
+.start-button button a {
+    text-decoration: unset;
+    color: white;
+}
+.start-button button:hover {
     cursor: pointer;
     transform: scale(1.1);
 }
