--- a/s-exam/style.css
+++ b/s-exam/style.css
@@ -33,7 +33,7 @@
     overflow: auto;
 }
 .q-circle {
-    /* background-color: #e93c3cc9;
+    background-color: #e93c3cc9;
     padding: 10px;
     width:300px;
     text-align: center;
@@ -41,10 +41,7 @@
     transition: .7s;
     font-weight: bold;
     font-size: 20px;
-    color: #fff; */
-
-    background-color: lawngreen;
-    border: none;
+    color: #fff;
 }
 .q-circle:hover {
     cursor: pointer;
@@ -60,6 +57,8 @@
 }
 .question-done {
     pointer-events: none;
+    background-color: grey !important;
+    border: none;
 }
 .option-container {
     background-color: #e93c3cc9;
