--- a/s-exam/style.css
+++ b/s-exam/style.css
@@ -56,7 +56,7 @@
     transform: scale(0.7);
 }
 .question-done {
-    pointer-events: none;
+    pointer-events: none !important;
     background-color: grey !important;
     border: none;
 }
