--- a/admin-panel/style.css
+++ b/admin-panel/style.css
@@ -23,15 +23,15 @@ html {
 }
 .dashboard {
     display: flex;
-    width: 80%;
+    width: 100%;
     margin: auto;
-    justify-content: space-around;
-    padding: 100px;
+    justify-content: flex-start;
+    padding-top: 100px;
 }
 .dashboard div {
     width: 250px;
     height: 250px;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin: auto;
     display: flex;
@@ -54,7 +54,4 @@ html {
     text-align: center;
     display: flex;
     justify-content: space-evenly;
-}
-table tr th {
-    padding: 10px;
 }
