--- a/s-exam/style.css
+++ b/s-exam/style.css
@@ -3,83 +3,91 @@
     padding: 0;
     margin: 0;
 }
-.header {
-    padding: 15px;
-    width: 100% auto;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.header h3 {
-    margin-top: 10px;
-}
-
 .timer{
-    margin-left: 40%;
-    margin-right: 40%;
-    color: white;
-    background-color: #9ccc65;
-    border-radius: 5px;
+    color:grey;
+    background-color:white;
+    border-radius: 0px;
     text-align: center;
-    font-size: 25px;
+    font-size: 30px;
+    align-self: right;
+    margin-top: 18px;
+    margin-left: 92%;
+    margin-right: 40px;
 }
 @keyframes hobble {
     50% { transform: scale(1.1); }
     100% { transform: scale(1); }
 }
-
 .container {
     padding: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'PT Sans', sans-serif;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 1%;
+}
+.question-wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    margin-top: 1%;
+}
+.question-container {
+    margin: auto;
+    width: 70vw;
+    border: 1px solid #D5DBDB;
 }
 .question {
-    background-color: #000000;
-    color: #fff;
-    font-weight: bold;
+    background-color: #fff;
+    color: gray;
+    font-weight: 500;
+    border: 1px inset;
     font-size: 20px;
     padding: 10px;
     padding-left: 30px;
 }
 .question-list {
     display: flex;
-    width: inherit;
-    padding: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 18vw;
+    height: 270px;
+    padding: 10px 10px 10px 40px;
     margin: 10px;
     align-items: center;
     overflow: auto;
+    border: 1px solid #D5DBDB;
 }
 .q-circle {
-    background-color: #9ccc65;
-    padding: 10px;
-    width:300px;
+    background-color: #D5D8DC;
+    padding: 5px;
+    width: 25px;
     text-align: center;
-    border-radius: 50px;
+    border-radius: 50%;
     transition: .7s;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
     color: #fff;
+    margin: 5px;
 }
 .q-circle:hover {
     cursor: pointer;
 }
 .question-selected {
     background-color: #fff !important;
-    border: 1px solid #9ccc65 !important;
-    /* box-shadow: 0px 0px 10px black !important; */
-    /* font-size: 20px; */
+    border: 1px solid #D5D8DC !important;
     font-weight: lighter;
-    color: #000000;
-    transform: scale(0.7);
+    color: #EC7063;
+    transform: scale(1.1);
 }
 .question-done {
     pointer-events: none !important;
-    background-color: grey !important;
-    border: none;
+    background-color: #EC7063  !important;
 }
 #ans {
     cursor: pointer;
 }
 .option-container {
-    background-color: #9ccc65;
+    background-color: #fff;
     padding: 10px;
 }
 #option_target div {
@@ -109,66 +117,68 @@
 }
 .topic-container {
     display: flex;
-    margin: 20px;
-    width: 100% auto;
-    justify-content: space-around;
+    flex-direction: row;
+    width: 60% ;
+    justify-content: space-between;
     align-items: center;
+    margin-left: 7%;
 }
 .topic {
-    width: 100%;
+    width: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
     text-align: center;
     transition: .7s;
-    color: #000000;
-    font-weight: 650;
+    color: grey;
+    font-weight: 350;
     font-size: 20px;
-    border-radius: 20px;
-    cursor: pointer;
+    border: 1px solid #D5DBDB;
+    cursor: not-allowed;
+
 }
-/* .topic:hover {
-    background-color: #000000;
-    color: #fff;
-    box-shadow: 0px 0px 10px black !important;
-} */
 .topic-selected {
-    background-color: #000000  !important;
+    background-color: #5DADE2  !important;
     color: #fff !important;
-    box-shadow: 0px 0px 10px black !important;
+    border: none;
+}
+.category-done {
+    background-color: #5DADE2  !important;
+    color: #fff !important;
+    border: none;
 }
 .line-next {
     border: 1px #fff;
-    width: 15%
+    width: 3%;
 }
 #submit {
     width: 100%;
     display: flex;
-    justify-content: center;
-    padding: 20px;
+    flex-direction: row;
+    padding-left: 24%;
 }
 #submit input {
+    font-family: 'PT Sans', sans-serif;
     padding: 10px 20px 10px 20px;
-    border-radius: 5px;
-    border: 0;
-    background-color: #000000   ;
-    color: white;
+    border: 1px solid #D5DBDB;
+    background-color: #fff;
+    color: grey;
     font-weight: lighter;
-    font-size: 14px;
+    font-size: 18px;
     transition: .7s;
     outline: none;
 }
 #submit input:hover {
-    background-color: #fff;
-    color: #000000;
+    background-color: #5DADE2  !important;
+    color: #fff !important;
     cursor: pointer;
-    font-weight: bold;
-    font-size: 16px;
+    font-weight: 250;
+    font-size: 20px;
     touch-action: cross-slide-x;
 }
 
-/* Style for question.html */
+/* Style for question.php */
 .q-container {
     background: url("https://mbcpeermade.com/userfiles/poster/1b97d750aa514ce1830cb183dab59107.jpg");
     background-attachment: fixed;
@@ -185,12 +195,12 @@
     margin: 60px 0px 50px 0px;
     font-size: 50px;
     font-weight: 750;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Cinzel', serif;
 }   
 .start-field {
     width: 60%;
     background-color: rgba(0, 0, 0, 0.541);
-    padding: 50px 0px 50px 0px;
+    padding: 40px 40px 40px 40px;
     border-radius: 20px;
     box-shadow: 0px 0px 50px black;
     color: white;
@@ -205,11 +215,10 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width: 100% auto;
     text-align: center;
-    padding: 30px;
 }
 .start-button button {
     font-size: 25px;
-    padding: 20px 40px 20px 40px;
+    padding: 10px 20px 10px 20px;
     border-radius: 30px;
     border: 0;
     background-color: indigo;
@@ -226,8 +235,6 @@
 }
 .rules {
     font-family: monospace;
-    font-weight: bold;
-    font-size: 15px;
+    font-size: 18px;
     width: 100% auto;
-    text-align: center;
 }
