--- a/s-exam/style.css
+++ b/s-exam/style.css
@@ -20,6 +20,7 @@
 }
 .container {
     padding: 20px;
+    overflow-y: hidden;
     font-family: 'Roboto', sans-serif;
     margin-left: 20px;
     margin-right: 20px;
@@ -156,10 +157,11 @@
     width: 3%;
 }
 #submit {
-    width: 100%;
+    width: 100% auto;
     display: flex;
     flex-direction: row;
     padding-left: 24%;
+    margin-top: 10px;
 }
 #submit input {
     font-family: 'PT Sans', sans-serif;
