--- a/s-exam/style.css
+++ b/s-exam/style.css
@@ -148,8 +148,8 @@
     border: 1px solid #32d4d6;
 }
 .category-done {
-    background-color: transparent  !important;
-    color: #32d4d6 !important;
+    background-color: rgb(88, 88, 88)  !important;
+    color: white !important;
     border: 1px solid #32d4d6;
 }
 .line-next {
