--- a/admin-panel/style.css
+++ b/admin-panel/style.css
@@ -1,4 +1,4 @@
-/* Style for student-result.php */
+/* Style for dashboard.h.php */
 *{
     padding: 0;
     margin: 0;
@@ -6,12 +6,14 @@
 html {
     scroll-behavior: smooth;
 }
-img {
-    z-index: -1;
+body .bg-image {
+    z-index: -10;
     -webkit-filter: blur(3px);
     filter: blur(3px);
+    height: 100vh;
+    width: 100vw;
     position: fixed;
-
+    background: url("http://mbcpeermade.com/userfiles/poster/59a7487994344d69931e69e79fd9abbc.jpg");
 }
 .container {
     width: 100vw;
@@ -21,15 +23,26 @@ img {
     font-family: 'Roboto', sans-serif;
 }
 .header {
-    height: 100px;
+    background-color: rgba(0, 0, 0, 0.87);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 15vh;
+    position: fixed;
+    z-index: 10;
+}
+.header img{
+    width: 45% !important;
 }
 .body-container {
     width: 100% auto;
+    height: 100vh;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-top: 7%;
+    margin: auto;
 }
 .dashboard {
     display: flex;
@@ -47,7 +60,7 @@ img {
     font-weight: 300;
     font-size: 22px;
     color: white;
-    background-color: #32D4D6;
+    background-color: rgba(10, 161, 161, 0.52);
     border: 1px solid #32D4D6;
     border-radius: 15%;
     transition: .5s;
@@ -69,10 +82,10 @@ img {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 .result-body-container {
     width: 100%;
+    margin-top: 13vh;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -161,12 +174,41 @@ Exam status of every Student record
 }
 
 /* Style for editQuestions.php */
+.mbc-header-logo {
+    position: fixed;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 13vh;
+    background-color: rgba(0, 0, 0, 0.815);
+}
+.mbc-header-logo div {
+    width: 50%;
+    color: white;
+    margin: 20px 30px;
+}
+#mbc-logo {
+    z-index: inherit !important;
+    filter: inherit !important;
+    position: inherit;
+    width: 75%;
+}
+.q-body-container {
+    margin-top: auto;
+    font-family: 'Baloo Da 2', cursive;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    overflow: auto;
+}
 .question-container {
     width: 100% auto;
     padding: 20px;
 }
 .filter-container {
     padding: 30px;
+    padding-top: 15vh;
     display: flex;
     justify-content: space-around;
 }
@@ -175,7 +217,7 @@ Exam status of every Student record
     padding: 5px 10px;
     border-radius: 5px;
     border: 0;
-    background-color: rgb(25, 195, 25);
+    background-color: rgb(50, 25, 195);
     color: white;
     transition: .7s;
     cursor: pointer;
@@ -195,11 +237,11 @@ Exam status of every Student record
     margin: auto;
 }
 .difficulty-options button {
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 5px;
     border: 0;
     color: white;
-    background-color: green;
+    background-color: rgb(16, 43, 165);
     cursor: pointer;
     transition: .7s;
 }
@@ -245,6 +287,7 @@ Exam status of every Student record
     justify-content: space-around;
     align-items: center;
     padding: 20px;
+    color: black !important;
     transition: .5s;
 }
 /* Pop-in & Pop-out animations */
