--- a/admin-panel/css/login-style.css
+++ b/admin-panel/css/login-style.css
@@ -7,7 +7,6 @@ body {
     padding: 0;
     margin: 0;
 }
-
 .body-container {
     background-color: blueviolet;
     width: 100w;
@@ -16,9 +15,10 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    overflow-y: hidden;
 }
 .login-container {
     background-color: rgba(5, 5, 5, 0.493);
@@ -38,18 +38,17 @@ form {
     color: white
 }
 .q-head {
-    width: 100% auto;
+    width: auto;
     text-align: center;
     background-color: rgba(34, 32, 32, 0.603);
-    margin: 60px 0px 50px 0px;
-    font-size: 50px;
-    font-weight: 750;
-    font-family: 'Cinzel', serif;
+    margin: auto;
+    padding: 30px 60px;
     box-shadow: 0px 0px 60px black;
-    padding: 20px;
     border-radius: 20px;
 } 
-
+.q-head img {
+    width: 100%;
+}
 input[type=text], input[type=password] {
     padding: 5px;
     border: 0;
@@ -66,4 +65,22 @@ input[type=submit] {
 }
 input[type=submit]:hover {
     transform: scale(1.1);
+}
+
+@media screen and (max-width: 450px){
+    .q-head{
+        padding: 10px 30px;
+        margin: 0;
+        border-radius: 0;
+    }
+
+    .login-container {
+        background-color: rgba(5, 5, 5, 0.493);
+        height: 150px;
+        padding: 20px;
+        font-size: 13px;
+    }
+    form input {
+        padding: 0;
+    }
 }
